caritas-workspace/ORISO-Database/k8s/mariadb-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oriso-mariadb-client
  labels:
    app: oriso-mariadb-client
spec:
  type: ClusterIP
  selector:
    app: oriso-mariadb-client
  ports:
    - name: http
      port: 80
      targetPort: http
